--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-redux": "^9.2.0",
+    "react-resizable": "^3.0.5",
     "react-resizable-panels": "^2.1.7",
     "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
