--- a/package.json
+++ b/package.json
@@ -36,11 +36,11 @@
     "lucide-react": "^0.474.0",
     "next": "^15.1.0",
     "radix-ui": "^1.1.3",
+    "re-resizable": "^6.11.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-redux": "^9.2.0",
-    "react-resizable": "^3.0.5",
     "react-resizable-panels": "^2.1.7",
     "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
