--- a/package.json
+++ b/package.json
@@ -33,12 +33,13 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
     "cookie": "^1.0.2",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.474.0",
     "next": "^15.1.0",
     "radix-ui": "^1.1.3",
     "re-resizable": "^6.11.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
     "react-redux": "^9.2.0",
     "react-resizable-panels": "^2.1.7",
@@ -48,6 +49,7 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.16",
     "@types/node": "^20",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
