--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cookie": "^1.0.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.474.0",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "^15.1.0",
     "radix-ui": "^1.1.3",
     "re-resizable": "^6.11.2",
